--- a/background.html
+++ b/background.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="jquery.js"></script>
+		<script type="text/javascript" src="facebook.js"></script>
 		<script type="text/javascript" src="background.js"></script>
 		<style type="text/css">
 body {
