--- a/background.html
+++ b/background.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript" src="facebook.js"></script>
 		<script type="text/javascript" src="background.js"></script>
+		<script type="text/javascript" src="oauth/oauth2.js"></script>
 		<style type="text/css">
 body {
 	margin: 0 auto;	
@@ -22,8 +22,5 @@ body {
 		</style>
 	</head>
 	<body>
-		<div class="mention">
-			<p style="font-size:20px">페이스북을 사용할 수 없는 시간입니다!</p>
-		</div>
 	</body>
 </html>
