--- a/background.html
+++ b/background.html
@@ -7,5 +7,6 @@
 		<script type="text/javascript" src="background.js"></script>
 	</head>
 	<body>
+		<p>현재 페이스북을 사용할 수 없는 시간입니다.</p>
 	</body>
 </html>
