--- a/popup.html
+++ b/popup.html
@@ -237,7 +237,7 @@ img {
 			</form>
 
 			<div class="graph">
-				<a href="graph.html">페이스북 상주 시간 그래프로 보기</a>
+				<a href="graph.html">페이스북 활동 지수 확인하기</a>
 			</div>
 		</div>
 		<div class="init">
