--- a/graph.html
+++ b/graph.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<script type="text/javascript" src="jquery.js"></script>
+		<script type="text/javascript" src="graph.js"></script>
 		<title></title>
 		<style type="text/css">
 @font-face {
@@ -18,13 +20,74 @@ body {
 	height: 300px;
 }
 
+.innerbox {
+	width: 350px;
+	height: 280px;
+	display: block;
+}
+
+.bulletin {
+	width: ;
+	height: ;
+	display: block;
+}
+
+.like {
+	width: ;
+	height: ;
+	display: none;
+}
+
+.comment {
+	width: ;
+	height: ;
+	display: none;
+}
+
+.staytime {
+	width: ;
+	height: ;
+	display: none;
+}
+
+.button {
+	width: 100%;
+	height: 40px;
+}
+
+.one, .two, .three, .four {
+	float: left;
+	width: 60px;
+	height: 20px;
+	margin-right: 25px;
+	font-size: 15px;
+}
 
 		</style>
 		<script type="text/javascript">
 
 		</script>
 	</head>
-
 	<body>
+		<div class="innerbox">
+			<div class="button">
+				<div class="one">게시글</div>
+				<div class="two">좋아요</div>
+				<div class="three">댓글횟수</div>
+				<div class="four">상주시간</div>
+			</div>
+			<div class="bulletin">
+				asdf
+			</div>
+			<div class="like">
+				like
+			</div>
+			<div class="comment">
+				comment
+			</div>
+			<div class="staytime">
+				staytime
+			</div>
+		</div>
 	</body>
 </html>
