--- a/graph.html
+++ b/graph.html
@@ -44,20 +44,14 @@ body {
 	display: none;
 }
 
-.staytime {
-	width: ;
-	height: ;
-	display: none;
-}
-
 .button {
 	width: 100%;
 	height: 40px;
 }
 
-.one, .two, .three, .four {
+.one, .two, .three {
 	float: left;
-	width: 60px;
+	width: 80px;
 	height: 20px;
 	margin-right: 25px;
 	font-size: 15px;
@@ -74,19 +68,15 @@ body {
 				<div class="one">게시글</div>
 				<div class="two">좋아요</div>
 				<div class="three">댓글횟수</div>
-				<div class="four">상주시간</div>
 			</div>
 			<div class="bulletin">
-				asdf
+				bulletin
 			</div>
 			<div class="like">
 				like
 			</div>
 			<div class="comment">
 				comment
-			</div>
-			<div class="staytime">
-				staytime
 			</div>
 		</div>
 	</body>
